<resources>
    <string name="app_name">Food Donation Application</string>
    <string name="login_create_account">Not registered yet? Sign up here</string>
    <string name="main_menu_text">Welcome to main screen!</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="fullname_placeholder">Full Name</string>
    <string name="telephone_number_placeholder">Telephone Number</string>
    <string name="social_community_description_placeholder">Social Community Description</string>
    <string name="register_title">Register as Donator</string>
    <string name="social_community_register_title">Register as Social Community</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_button">Sign In</string>
    <string name="donate_activity_title">Donate for Charity</string>
    <string name="pick_up_address_placeholder">Pick Up Address</string>
    <string name="food_items_placeholder">Food item(s)</string>
    <string name="pick_up_date_placeholder">Pick Up / Send Date</string>
    <string name="time_placeholder">Time</string>
    <string name="donate_quantity_placeholder">Donate Quantity in Kg</string>
    <string name="confirm_donation_button">Confirm Donation</string>
    <string name="food_image_text">Food Image :</string>
    <string name="social_community_image_text">Social Community Profile Picture:</string>
    <string name="donator_details_title">Donator Details</string>
    <string name="donator_name_placeholder">Donator Name</string>
    <string name="donator_phone_number_placeholder">Donator Phone Number</string>
    <string name="donation_date_placeholder">Donation Date</string>
    <string name="delete_donation_button">Delete Donation</string>
    <string name="event_title_text">Event Title</string>
    <string name="event_description_text">Event Description :</string>
    <string name="social_community_name">Social Community Name :</string>
    <string name="social_community_telephone_number">Social Community Telephone Number :</string>
    <string name="event_total_donation">Total Donation :</string>
    <string name="event_end_date">End Date : </string>
    <string name="donate_now_button">Donate Now</string>
    <string name="donation_details_title">Donation Details</string>
    <string name="event_name_placeholder">Event Name</string>
    <string name="social_community_name_placeholder">Social Community Name</string>
    <string name="donate_quantity_text">Donate Quantity :</string>
    <string name="create_event_title">Create Food Donation Event for Charity</string>
    <string name="update_event_title">Event Title</string>
    <string name="event_title_placeholder">Event Title</string>
    <string name="event_description_placeholder">Event Description</string>
    <string name="event_end_date_placeholder">Event End Date</string>
    <string name="target_in_quantity_placeholder">Target quantity in Kg</string>
    <string name="event_photo_text">Event Photo :</string>
    <string name="confirm_event_button">Confirm Event</string>
    <string name="profile_information_title">Profile Information</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="update_details_button">Update Details</string>
    <string name="log_out_button">Log Out</string>
    <string name="create_event_bottom_navbar">Create Event</string>
    <string name="event_history_bottom_navbar">Event History</string>
    <string name="donate_bottom_navbar">Donate</string>
    <string name="donation_history_bottom_navbar">Donation History</string>
    <string name="edit_profile_bottom_navbar">Edit profile</string>
    <string name="search_event_title_placeholder">Search Event Title</string>
    <string name="profile_bottom_navbar_social_community">Profile</string>
    <string name="donation_history_total_title">You have donated … Kg of Food</string>
    <string name="donator_history_total_title">People have donated … Kg of food</string>
    <string name="sort_by_spinner">Sort By</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
</resources>
