<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="#af4448"
    android:id="@+id/donator_item_fragment_id">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
<!--        android:src="@drawable/donator_list"-->
        <ImageView
            android:id="@+id/eventHistoryImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:src="@drawable/basket_history_icon"
            app:layout_constraintBottom_toBottomOf="@+id/donatorDate"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/donatorName" />

        <TextView
            android:id="@+id/donatorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/donator_name_placeholder"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/eventHistoryImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/donatorTotalDonation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/donate_quantity_placeholder"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/donatorDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/eventHistoryImage"
            app:layout_constraintTop_toBottomOf="@+id/donatorName" />

        <TextView
            android:id="@+id/donatorDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/donation_date_placeholder"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/eventHistoryImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>