<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Donator.EventUserInterface.DonateActivity">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/donate_activity_title"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ShadowForText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donate_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:errorEnabled="true"
            app:helperText="*Optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title"
            app:helperTextEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/pick_up_address_placeholder" >

            <EditText
                android:id="@+id/donate_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/pick_up_address_icon"
                android:drawablePadding="7dp"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donate_food_item_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/donate_address_layout"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="@+id/donate_address_layout"
            app:layout_constraintTop_toBottomOf="@+id/donate_address_layout">

            <EditText
                android:id="@+id/donate_food_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="152dp"
                android:drawableStart="@drawable/food_items_icon"
                android:drawablePadding="7dp"
                android:ems="10"
                android:hint="@string/food_items_placeholder"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/register_email_layout"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/register_email_layout"
                app:layout_constraintTop_toBottomOf="@+id/register_email_layout" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donate_date_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/pick_up_date_placeholder"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/donate_food_item_layout"
            app:layout_constraintStart_toStartOf="@+id/donate_food_item_layout"
            app:layout_constraintTop_toBottomOf="@+id/donate_food_item_layout">

            <EditText
                android:id="@+id/donate_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/pick_up_icon"
                android:drawablePadding="7dp"
                android:ems="10"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donate_time_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/time_placeholder"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/donate_date_layout"
            app:layout_constraintStart_toStartOf="@+id/donate_date_layout"
            app:layout_constraintTop_toBottomOf="@+id/donate_date_layout">

            <EditText
                android:id="@+id/donate_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/time_icon"
                android:drawablePadding="7dp"
                android:ems="10"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/donate_quantity_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/donate_quantity_placeholder"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/donate_time_layout"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="@+id/donate_time_layout"
            app:layout_constraintTop_toBottomOf="@+id/donate_time_layout">

            <EditText
                android:id="@+id/donate_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/quantity_icon"
                android:drawablePadding="7dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/donate_confirm"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/confirm_donation_button"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="14sp"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donate_food_photo" />

        <ProgressBar
            android:id="@+id/donate_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/donate_confirm"
            app:layout_constraintEnd_toEndOf="@+id/donate_confirm"
            app:layout_constraintStart_toStartOf="@+id/donate_confirm"
            app:layout_constraintTop_toTopOf="@+id/donate_confirm" />

        <ImageView
            android:id="@+id/donate_food_photo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:src="@drawable/insert_image"
            app:layout_constraintEnd_toEndOf="@+id/donate_quantity_layout"
            app:layout_constraintStart_toStartOf="@+id/donate_quantity_layout"
            app:layout_constraintTop_toBottomOf="@+id/donate_insert_image_text" />

        <TextView
            android:id="@+id/donate_insert_image_text"
            style="@style/ShadowForText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/food_image_text"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/donate_quantity_layout"
            app:layout_constraintTop_toBottomOf="@+id/donate_quantity_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>