<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.general.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register_title"
            style="@style/ShadowForText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/register_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_full_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title">

            <EditText
                android:id="@+id/register_full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:ems="10"
                android:hint="@string/fullname_placeholder"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_telephone_number_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="13"
            app:layout_constraintEnd_toEndOf="@+id/register_full_name_layout"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="@+id/register_full_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/register_full_name_layout">

            <EditText
                android:id="@+id/register_telephone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:ems="10"
                android:hint="@string/telephone_number_placeholder"
                android:inputType="phone"
                android:maxLength="13" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/register_telephone_number_layout"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="@+id/register_telephone_number_layout"
            app:layout_constraintTop_toBottomOf="@+id/register_telephone_number_layout"
            app:helperTextEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/email_placeholder"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/register_email_layout"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="@+id/register_email_layout"
            app:layout_constraintTop_toBottomOf="@+id/register_email_layout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="152dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:ems="10"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/register_email_layout"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/register_email_layout"
                app:layout_constraintTop_toBottomOf="@+id/register_email_layout" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_confirm"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_button"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="14sp"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/register_password_layout"
            app:layout_constraintStart_toStartOf="@+id/register_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/register_password_layout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/register_confirm"
            app:layout_constraintEnd_toEndOf="@+id/register_confirm"
            app:layout_constraintStart_toStartOf="@+id/register_confirm"
            app:layout_constraintTop_toTopOf="@+id/register_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

